--- a/requirements.txt
+++ b/requirements.txt
@@ -13,11 +13,12 @@ Flask-SQLAlchemy==2.1
 Flask-WhooshAlchemy==0.56
 Flask-WTF==0.13.1
 flipflop==1.0
+guess-language==0.2
 itsdangerous==0.24
 Jinja2==2.8
 MarkupSafe==0.23
 pbr==1.10.0
-pycparser==2.16
+pycparser==2.17
 pytz==2016.7
 six==1.10.0
 SQLAlchemy==1.1.3
